k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rapidocine
  labels:
    name: rapidocine
    environment: production
